crates/cli/tests/snapshots/run_bun_test__bun__handles_process_exit_code_zero.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:exitCodeZero
stdout
This should appear!
▪▪▪▪ bun:exitCodeZero (100ms)

Tasks: 1 completed
 Time: 100ms

stderr


