crates/cli/tests/snapshots/run_bun_test__bun__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:processExitZero
stdout
▪▪▪▪ bun:processExitZero (100ms)

Tasks: 1 completed
 Time: 100ms

stderr


