crates/cli/tests/snapshots/run_bun_test__bun__handles_unhandled_promise.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:unhandledPromise
stdout
▪▪▪▪ bun:unhandledPromise (100ms)
stderr
error: Oops
Oops

Bun v1.2.1 (macOS arm64)
Error: task_runner::run_failed

  × Task bun:unhandledPromise failed to run.
  ╰─▶ Process bun failed: exit code 1
