crates/cli/tests/snapshots/run_bun_test__bun__inherits_moon_env_vars.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:envVarsMoon
MOON_CACHE=read-write
MOON_CACHE_DIR=<WORKSPACE>/.moon/cache
MOON_HOME=<WORKSPACE>/.moon-home
MOON_LOG=trace
MOON_PROJECT_ID=bun
MOON_PROJECT_ROOT=<WORKSPACE>/base
MOON_PROJECT_SNAPSHOT=<WORKSPACE>/.moon/cache/states/bun/snapshot.json
MOON_PROJECT_SOURCE=base
MOON_TARGET=bun:envVarsMoon
MOON_TASK_ID=envVarsMoon
MOON_THEME=dark
MOON_WORKING_DIR=<WORKSPACE>
MOON_WORKSPACE_ROOT=<WORKSPACE>
▪▪▪▪ bun:envVarsMoon (100ms)

Tasks: 1 completed
 Time: 100ms
