crates/cli/tests/snapshots/run_bun_test__bun__passes_args_through.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:passthroughArgs
Args: -aBc --opt value --optCamel=value foo bar baz --opt-kebab 123
▪▪▪▪ bun:passthroughArgs (100ms)

Tasks: 1 completed
 Time: 100ms



