crates/cli/tests/snapshots/run_bun_test__bun__runs_cjs_files.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:cjs 
stdout
▪▪▪▪ bun:cjs (100ms)

Tasks: 1 completed
 Time: 100ms

stderr


