crates/cli/tests/snapshots/run_bun_test__bun__runs_from_project_root.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:runFromProject
<WORKSPACE>/base
▪▪▪▪ bun:runFromProject (100ms)

Tasks: 1 completed
 Time: 100ms



