crates/cli/tests/snapshots/run_bun_test__bun__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:runFromWorkspace
<WORKSPACE>
▪▪▪▪ bun:runFromWorkspace (100ms)

Tasks: 1 completed
 Time: 100ms



